finished add and delete functionality

--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
   <div class="bg">
     <div class="todo-main">
       <h1 class="todo-header">TODO</h1>
-      <img id="theme-toggle" src="images/icon-moon.svg" alt="moon icon">
+      <a href="#" id="dark-theme"><img src="images/icon-moon.svg" alt="moon icon"></a>
+      <a href="#" id="light-theme"><img src="images/icon-sun.svg" alt="sun icon"></a>
     </div>
     <input type="text" id="task-input" placeholder="Create a new todo..">
   </div>
 
-  <ul id="todo-list"></ul>
+  <ul id="todo-list">
+    <!-- <a href="images/icon-cross.svg"></a> -->
+  </ul>
 
   <!-- Attribution -->
   <!-- <div class="attribution">
