local storage persistence added

--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
     <input type="text" id="task-input" placeholder="Create a new todo..">
   </div>
 
-  <ul id="todo-list">
-    <!-- <a href="images/icon-cross.svg"></a> -->
-  </ul>
+  <ul id="todo-list"></ul>
 
   <!-- Attribution -->
   <!-- <div class="attribution">
