--- a/index.html
+++ b/index.html
@@ -15,12 +15,23 @@
     <div class="todo-main">
       <h1 class="todo-header">TODO</h1>
       <a href="#" id="dark-theme"><img src="images/icon-moon.svg" alt="moon icon"></a>
-      <a href="#" id="light-theme"><img src="images/icon-sun.svg" alt="sun icon"></a>
+      <!-- <a href="#" id="light-theme"><img src="images/icon-sun.svg" alt="sun icon"></a> -->
     </div>
     <input type="text" id="task-input" placeholder="Create a new todo..">
   </div>
 
-  <ul id="todo-list"></ul>
+  <ul id="todo-list">
+    <li class="item last-li">
+      <p><span class="count">0</span> items left</p>
+      <p id="tabs">
+        <span><a href="#">All</a></span>
+        <span><a href="#">Active</a></span>
+        <span><a href="#">Completed</a></span>
+      </p>
+      <p id="clear"><a href="#">Clear Completed</a></p>
+      
+    </li>
+  </ul>
 
   <!-- Attribution -->
   <!-- <div class="attribution">
