theme-colour-mobile

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="theme-color" content="hsl(235, 19%, 35%)">
   <title>Frontend Mentor | Todo app</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
@@ -26,7 +27,7 @@
       <p id="tabs">
         <span><a href="#">All</a></span>
         <span><a href="#">Active</a></span>
-        <span><a href="#">Completed</a></span>
+        <span id="completed"><a href="#">Completed</a></span>
       </p>
       <p id="clear"><a href="#">Clear Completed</a></p>
       
